--- a/Peter/pca.ipynb
+++ b/Peter/pca.ipynb
@@ -182,6 +182,7 @@
     "\n",
     "top_features = set()\n",
     "\n",
+    "# extract top features from PCA components \n",
     "for i in range(n_components_80):\n",
     "    top_features.update(\n",
     "        loading_matrix.iloc[i].abs().sort_values(ascending=False).head(5).index\n",
@@ -223,19 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of components: 22\n"
+      "Number of components: 22\n",
+      "Final model accuracy with 22 components: 0.95\n"
      ]
     }
    ],
    "source": [
-    "# test using random forest classifier\n",
+    "# test using random forest classifier and 22 components from PCA\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
